# nivo-reader

./: .gitignore  README.md  process_nivo_images.py  pyproject.toml  requirements.txt
src/nivo_reader/: README.md  __init__.py  cli.py  excel_output.py  image_processing.py  nivo_reader.py  ocr_processing.py  roi_utilities.py  table_detection.py
src/nivo_reader/configuration/: preprocessing.py  table_and_cell_detection.py
src/nivo_reader/modules/cells_detection/: base.py  nivo_cells_detection.py
src/nivo_reader/modules/preprocessing/: automatic_rotation.py  base.py
src/nivo_reader/modules/reading_transformation/: __init__.py  base.py  closest_match.py  custom_substitution.py  filter_characters.py  overwrite_cell_content.py  replace_characters.py
src/nivo_reader/modules/results_aggregation/: __init__.py  base.py  highest_scoring.py  most_occurring_values.py
src/nivo_reader/modules/table_detection/: base.py  nivo_table_detection.py
src/nivo_reader/original_parameterization/: preprocessing.py
src/nivo_reader/scripts/: cleanup.py  compare_results.py  digitize.py  write_excel.py
src/nivo_reader/scripts/utils/: excel_styling.py  paths.py
