[project]
name = "nivo-reader"
version = "0.1.0"
description = "Libreria per l'estrazione automatica di dati da tabelle NIVO (tabelle meteorologiche storiche) da immagini scansionate"
readme = "README.md"
authors = [
    { name = "Davide Nicoli", email = "davide.nicoli@unimi.it" }
]
requires-python = ">=3.12"
dependencies = [
    "easyocr>=1.7.3",
    "fancy-dataclass>=0.10.1",
    "fastexcel>=0.16.0",
    "img2table>=1.4.2",
    "numpy>=2.3.5",
    "opencv-contrib-python-headless>=4.11.0.86",
    "openpyxl>=3.1.5",
    "paddleocr[all]>=3.3.2",
    "paddlepaddle>=3.2.2",
    "pillow>=12.0.0",
    "polars>=1.35.2",
    "polars-distance>=0.5.3",
    "pytesseract>=0.3.13",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "tqdm>=4.67.1",
]
classifiers = ["Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Intended Audience :: Science/Research"]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[project.urls]
Repository = "https://github.com/dnstudent/nivo-reader"

[project.scripts]
nivo-reader = "nivo_reader.cli:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.7",
]

[tool.uv.sources]
easyocr = { git = "https://github.com/dnstudent/EasyOCR" }

[tool.basedpyright]
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownVariableType = "none"
reportAny = "none"
reportExplicitAny = "none"
reportUnknownParameterType = "none"
reportMissingParameterType = "none"
reportMissingTypeStubs = "none"