[project]
name = "nivo-reader"
version = "0.5.0"
description = "Libreria per l'estrazione automatica di dati da tabelle NIVO (tabelle meteorologiche storiche) da immagini scansionate"
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
authors = [{ name = "Davide Nicoli", email = "davide.nicoli@unimi.it" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "easyocr>=1.7.3",
  "fancy-dataclass>=0.10.2",
  "fastexcel>=0.16.0",
  "img2table>=1.4.2",
  "numpy>=2.3.5",
  "opencv-contrib-python-headless>=4.11.0.86",
  "openpyxl>=3.1.5",
  "paddleocr[all]>=3.4.0",
  "paddlepaddle>=3.3.0",
  "pandas[excel]>=3.0.1",
  "pillow>=12.0.0",
  "polars-distance>=0.5.3",
  "polars[all]>=1.35.2",
  "pytesseract>=0.3.13",
  "scikit-learn>=1.7.2",
  "scipy>=1.16.3",
  "tqdm>=4.67.1",
  "xlsxwriter>=3.2.9",
]

[project.urls]
Repository = "https://github.com/dnstudent/nivo-reader"

[project.scripts]
nivo-reader = "nivo_reader.scripts.digitize:main"
nivo-cleanup = "nivo_reader.scripts.cleanup:main"
nivo-writer = "nivo_reader.scripts.write_excel:main"

[dependency-groups]
dev = [
  "basedpyright>=1.38.2",
  "ipykernel>=7.1.0",
  "ipywidgets>=8.1.8",
  "marimo>=0.20.2",
  "matplotlib>=3.10.7",
  "python-lsp-ruff>=2.3.0",
  "python-lsp-server>=1.14.0",
  "ruff>=0.15.4",
  "websockets>=16.0",
]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[tool.basedpyright]
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownVariableType = "none"
reportAny = "none"
reportExplicitAny = "none"
reportUnknownParameterType = "none"
reportMissingParameterType = "none"
reportMissingTypeStubs = "none"

[tool.pyrefly]
project-includes = ["**/*.py*", "**/*.ipynb"]

[tool.uv.sources]
easyocr = { git = "https://github.com/dnstudent/EasyOCR" }
